--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
+mission-web/node_modules
 dist
 dist-ssr
 *.local
@@ -40,3 +40,5 @@ thumb
 sketch
 
 # End of https://www.toptal.com/developers/gitignore/api/react
+
+.vite
